--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.0.7",
+    "@angular/cdk": "^6.3.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^6.3.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular-ui-validate": "^1.2.3",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "moment": "^2.22.2",
+    "ngx-moment": "^3.1.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
