--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "concurrently -r \"npm run start:server\" \"npm run start:client\"",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start:server": "set DEBUG=platzi-overflow* & babel-node server/index.js",
+    "start:client": "ng serve"
   },
   "private": true,
   "dependencies": {
@@ -23,10 +25,16 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "angular-ui-validate": "^1.2.3",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "concurrently": "^3.6.0",
     "core-js": "^2.5.4",
+    "debug": "^3.1.0",
+    "express": "^4.16.3",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
     "ngx-moment": "^3.1.0",
+    "nodemon": "^1.18.3",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
