--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "debug": "^3.1.0",
     "express": "^4.16.3",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "ngx-moment": "^3.1.0",
     "nodemon": "^1.18.3",
