--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
+    "mongoose": "^5.2.4",
+    "mongoose-unique-validator": "^2.0.1",
     "ngx-moment": "^3.1.0",
     "nodemon": "^1.18.3",
     "rxjs": "^6.2.2",
@@ -44,14 +46,14 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "babel-preset-stage-0": "^6.24.1",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -62,6 +64,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
