--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-ui-validate": "^1.2.3",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.0",
     "core-js": "^2.5.4",
